--- a/todo/todo/TODO.css
+++ b/todo/todo/TODO.css
@@ -64,3 +64,16 @@ body{
 .modal-content{
     background-color: #333;
 }
+
+.loginWindow {
+    position: fixed;
+    transform: translate(-50%, -50%);
+    top: 50vh;
+    left: 50vw;
+}
+
+.logout {
+    position: fixed;
+    top: 0;
+    right: 0;
+}
